package domain.entities.serviceoverview;

public class FinancialOverviewId {
    private int id;

    public FinancialOverviewId(int id) {
        this.id = id;
    }

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }
}

